[build-system]
requires = ["setuptools>=78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "renovate-poc"
version = "0.1.0"
description = "PoC project for testing Renovate with setuptools-based pyproject.toml"
authors = [
  { name = "Pravin" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  # This is intentionally pinned to an old version to test Renovate
  "requests>=2.20,<3.0"
]

[project.optional-dependencies]
testing = [
  "pytest>=8.4,<8.5",
  "coverage>=7.0,<8.0"
]

[project.scripts]
renovate_poc = "main:check_status"
